syntax = "proto3";

package auth;

service AuthService {
  rpc GetParticipantsByAuthIds (GetParticipantsByAuthIdsRequest) returns (GetParticipantsByAuthIdsResponse);
}

message GetParticipantsByAuthIdsRequest {
  repeated string authIds = 1;
}

message GetParticipantsByAuthIdsResponse {
  repeated Participant participants = 1;
}

message Participant {
  string authId = 1;
  string username = 2;
}
