syntax = "proto3";

package users;

service UsersService {
  rpc GetStoreByStorePublicId (GetStoreByStorePublicIdRequest) returns (GetUserByStorePublicIdResponse);
  rpc GetBuyerByBuyerPublicId (GetStoreByStorePublicIdRequest) returns (GetUserByStorePublicIdResponse);
}

message GetBuyerByAuthIDRequest {
  string authId = 1;
}

message GetBuyerByAuthIdResponse {
  string buyerPublicId = 1;
  string authId = 2;
  string storePublicId = 3;
  string username = 4;
  string email = 5;
  ShippingAddress shippingAddress = 6;
}

message ShippingAddress {
  string shippingAddressPublicId = 1;
  string address = 2;
  string city = 3;
  string country = 4;
  string postalCode = 5;
}

message GetStoreByStorePublicIdRequest {
  string storePublicId = 1;
}

message GetUserByStorePublicIdResponse {
  string storePublicId = 1;
  string name = 2;
  string ownerAuthId = 3;
  string username = 4;
  string email = 5;
  string description = 6;
  string socialLinks = 7;
  string completedOrders = 8;
  string cancelledOrders = 9;
  string totalEarnings = 10;
  string totalProducts = 11;
  string createdAt = 12;
}
